...
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="circled_play"/>
                                <connections>
                                    <action selector="generateNumbers" destination="9pv-A4-QxB" eventType="touchUpInside" id="v1b-5b-nvH"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mMd-jf-D2o" customClass="ModifiedTextField" customModule="PLDemo" customModuleProvider="target">
                                <rect key="frame" x="16" y="89" width="290" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Generator" image="keypad" id="acW-dT-cKf" userLabel="GeneraterTab"/>
                    <connections>
                        <outlet property="numberField" destination="mMd-jf-D2o" id="MTr-50-bG0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
            </objects>
...
                                </items>
                            </navigationBar>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="History" image="list" selectedImage="list" id="cPa-gy-q4n" userLabel="HistoryTab"/>
                    <connections>
                        <outlet property="historyTableView" destination="IT5-HL-tno" id="S3v-ST-j4b"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
            </objects>
...
