...
        // Pass the selected object to the new view controller.
    }
    */
    
    
    func showErrorMessage(view: UIViewController) {
        let alert = UIAlertController(title: "Enter Number", message: "Please enter number between 5 and 20", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
        view.present(alert, animated: true, completion: nil)
    }
    
    func showErrorMessage(view: UIViewController, message:String) {
        let alert = UIAlertController(title: "Error", message:message, preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
...
